2004-05-30  Dominique Devriese  <devriese@kde.org>

	* Show a text in the statusbar describing what we want the user to
	select, in ConstructMode.

	* Add an example of a cubic constructed as a locus.

	* Clean the status bar text on time in ConstructMode and
	TestConstructMode.

	* Make SetCoordinateSystemAction into a KSelectAction, so the user
	can see what kind of coordinate system he's currently using.

	* Some tuning of the UI: move Transformations and Tests menu into
	the Objects menu because the menubar was getting too crowded.

2004-05-29  Dominique Devriese  <devriese@kde.org>

	* Fix a crash related to a locus containing some invalid points,
	and added the offending test file in filters/tests.

	* Fix some --enable-final problems in the filters/ directory.

2004-05-28  Dominique Devriese  <devriese@kde.org>

	* Add a test file "testalotofeverything.kig"

	* Add a Similitude transformation.

	* Add a VectorEqualityTestType.

2004-05-27  Dominique Devriese  <devriese@kde.org>

	* Fix so that Kig saves its window settings on exit.

2004-05-23  Dominique Devriese  <devriese@kde.org>

	* replace the custom configureShortcuts code with the standard KDE
	one if the user is running HEAD.

2004-05-18  Pino Toscano <toscano.pino@tiscali.it>

	* Move ArcBTPType from other_type.* into arc_type.*.

	* Add two new types, ArcBCPA ( Arc By Center, starting Point and
	Angle ) and CircleBCL ( Circle By Center and Line - via macro ).

	* Now every submenu in the RMB menu can have an own icon.

	* Add a menu icon for every ExportAction.

	* Various little improvements

04-05-18  Dominique Devriese  <devriese@kde.org>

	* Add a --convert-to-native command line option, which converts
	the given file to the native Kig file format ( without a GUI ).

	* Split up KigDocument into KigPart and KigDocument

2004-05-15  Dominique Devriese  <devriese@kde.org>

	* Intersecting with a segment only gives points that really are on
	the segment, and an InvalidImp in other cases.
